## scikit-plots/scikitplot/externals/_seaborn/meson.build

# Authors: The scikit-plots developers
# SPDX-License-Identifier: BSD-3-Clause

######################################################################
## Load submodule files
######################################################################

## Load submodule files
# install_subdir(
#   '.',
#   install_dir: py.get_install_dir() / 'scikitplot/externals/_seaborn',
#   install_tag: 'python-runtime',
# )

######################################################################
##
######################################################################
